# robocup_vision

./: CMakeLists.txt  README.md  package.xml
config/: camera_config.yaml  robot_config.yaml
include/detection/: detection_node.hpp
include/pan_tilt/: pan_tilt_node.hpp
include/refiner/: refiner_node.hpp
include/usb_cam/insta/: pan_tilt_camera_node.hpp
include/utils/: utils.hpp
launch/: robocup_vision.launch.py
model/: best.xml
msg/: PanTiltMsgs.msg  PanTiltStatusMsgs.msg
src/detection/: detection_node.cpp
src/pan_tilt/: pan_tilt_node.cpp
src/refiner/: refiner_node.cpp
src/usb_cam/insta/: pan_tilt_camera_node.cpp  usb_camera.cpp
