<?xml version="1.0"?>
<package format="3">
  <name>robocup_vision</name>
  <version>0.0.1</version>
  <description>로보컵 비전</description>

  <maintainer email="leokim0503@naver.com">kgh2005</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>OpenCV</depend>
  <depend>std_msgs</depend>
  <depend>rclcpp_lifecycle</depend>

  <depend>builtin_interfaces</depend>
  
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>